fix note btn z-index

--- a/wwwroot/css/file-fb2-preview.css
+++ b/wwwroot/css/file-fb2-preview.css
@@ -107,6 +107,7 @@
 .note-btn {
     position: relative;
     margin-right: 2em;
+    z-index: 1000;
 }
 
 .note-btn::after {
